# mailify

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  flake.nix
.github/workflows/: ci.yml
lib/: Cargo.toml
lib/src/: heuristics.rs  lib.rs
lib/tests/: integration_test.rs
