[package]
name = "mailify-lib"
description = "Identify if a mail address exists"
authors = ["Thomas Zahner <thomas.zahner@protonmail.ch>"]
homepage = "https://github.com/thomas-zahner/mailify"
license = "Apache-2.0 OR MIT"
readme = "../README.md"
keywords = ["email", "checker", "smtp"]
edition = "2024"
version.workspace = true

[dependencies]
async-smtp = "0.10.2"
hickory-resolver = "0.25.2"
tokio = { version = "1.48.0", features = ["rt", "macros"] }

[dev-dependencies]
tokio-util = { version = "0.7.18", features = ["codec"] }
futures = "0.3.31"
serial_test = "3.3.1"
